--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,44 @@
-body {
-  font-family:
-    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
-    sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+@font-face {
+  font-family: "Pretendard";
+  src: url("./assets/fonts/Pretendard-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-display: swap;
 }
+
+@font-face {
+  font-family: "Pretendard";
+  src: url("./assets/fonts/Pretendard-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Pretendard";
+  src: url("./assets/fonts/Pretendard-SemiBold.woff2") format("woff2");
+  font-weight: 600;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('./assets/fonts/JetBrainsMono-Regular.woff2') format('woff2');
+  font-style: normal;
+}
+
+
+html {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  /*font-family: 'JetBrains Mono', monospace;*/
+  font-family: "Pretendard", sans-serif;
+  /*font-size: 12px;*/
+}
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+:root {
+
+}
+
