--- a/src/app/components/chart/chart.css
+++ b/src/app/components/chart/chart.css
@@ -8,3 +8,23 @@
 .recharts-surface *:focus {
     outline: none !important;
 }
+
+
+.page-chart {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    min-height: 0;
+    padding: 5px;
+    box-sizing: border-box
+}
+
+.page-chart .chart-title {
+    flex: 0 0 25px
+}
+
+.page-chart .chart-body {
+    flex: 1;
+    min-height: 0
+}
