--- a/src/app/components/just-layout/ui/JustLayoutView.css
+++ b/src/app/components/just-layout/ui/JustLayoutView.css
@@ -218,3 +218,10 @@
 .just-menu-item>div {
     height: 100%;
 }
+
+.just-overlay {
+    position: absolute;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+}
