--- a/src/app/page/PageView.css
+++ b/src/app/page/PageView.css
@@ -190,3 +190,31 @@
     flex: 1;
 
 }
+
+.badge-wrap {
+    position: relative;
+    display: inline-block;
+}
+
+.badge {
+    position: absolute;
+    /*transform: translate(35%, -35%);*/
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    /*height: 20px;*/
+    min-width: 10px;
+    /*padding: 0 6px;*/
+    padding: 6px;
+    border-radius: 999px;
+    background: #ea7a9c;
+    color: #fff;
+    font-size: 12px;
+    line-height: 1;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.25);
+    pointer-events: none;
+    user-select: none;
+}
+
+.fa-lock {
+}
