--- a/src/app/chart/ui/ChartView.css
+++ b/src/app/chart/ui/ChartView.css
@@ -1,4 +1,4 @@
-.grid-view {
+.chart-view {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -9,17 +9,17 @@
     box-sizing: border-box;
 }
 
-.grid-view .grid-head {
+.chart-view .chart-head {
     flex: 0 0 25px;
     display: flex;
     padding: 3px;
 }
-.grid-view .grid-container {
+
+.chart-view .chart-container {
     display: flex;
     flex: 1;
     min-height: 0;
     min-width: 0;
 }
 
-
-.grid-view svg { color: #f4a261 }
+.chart-view svg { color: #f4a261 }
