--- a/src/app/components/grid/grid.css
+++ b/src/app/components/grid/grid.css
@@ -5,6 +5,8 @@
     flex: 1;
     min-height: 0;
     min-width: 0;
+    width: 100%;
+    height: 100%;
     overflow: auto;
     /*font-family: 'JetBrains Mono', monospace;*/
     font-family: 'Malgun Gothic', '맑은 고딕', sans-serif;
