--- a/src/app/components/terminal/Terminal.css
+++ b/src/app/components/terminal/Terminal.css
@@ -3,8 +3,9 @@
     flex: 1;
     display: flex;
     min-height: 0;
+    min-width: 0;
     width: 100%;
-    /*height: 100%;*/
+    height: 100%;
 }
 
 .xterm {
