--- a/src/app/page/PageView.css
+++ b/src/app/page/PageView.css
@@ -165,10 +165,25 @@
 .page-body .tab-body {
     flex: 1;
     display: flex;
+    flex-direction: column;
     min-height: 0;
     /*padding: 1px;*/
     /*border: 1px solid #ac2070;*/
     box-sizing: border-box;
+    height: 100%;
+}
+
+.tab-body .title {
+    flex: 0 0 25px;
+}
+
+.tab-body .content {
+    flex: 1;
+    min-height: 0;
+    min-width: 0;
+    width: 100%;
+    height: 100%;
+    /*overflow: auto;*/
 }
 
 .page-body .tabs .tab-title {
@@ -217,4 +232,11 @@
 }
 
 .fa-lock {
+}
+
+.fa-download {
+    color: #174aae;
+}
+.fa-download:hover {
+    ;
 }
