--- a/src/app/tool-bar/JustToolBar.css
+++ b/src/app/tool-bar/JustToolBar.css
@@ -7,7 +7,7 @@
     padding: 5px 0 5px 0;
     display: flex;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.82);;
+    background-color: rgba(0, 0, 0, 0.82);
     flex: 0 0 40px;
     row-gap: 5px;
     align-items: center;
