--- a/src/app/components/just-layout/ui/JustLayoutView.css
+++ b/src/app/components/just-layout/ui/JustLayoutView.css
@@ -171,7 +171,8 @@
 }
 
 .just-draggable-title.last-active {
-    background-color: #121f4a;
+    /*background: linear-gradient(135deg, rgba(207, 66, 36, 0.87), rgba(119, 59, 44, 0.8));*/
+    background: linear-gradient(135deg, rgba(23, 74, 174, 0.7), rgba(8, 24, 106, 0.8));
 }
 
 .just-draggable-title .just-icon { display: flex; flex: 0 0 25px; align-items: center; justify-content: center}
