page01 icon color

--- a/src/app/page/PageView.css
+++ b/src/app/page/PageView.css
@@ -201,6 +201,9 @@
 .page-body .tabs .tab-title.active {
     background-color: #25324d;
 }
+.page-body .tabs .tab-title svg {
+    color: #bcccdc
+}
 
 .page-chart {
     display: flex;
