--- a/src/app/top-menu/TopMenuBar.css
+++ b/src/app/top-menu/TopMenuBar.css
@@ -1,12 +1,23 @@
 .just-top-menu-bar {
+    -webkit-app-region: drag;
+
     flex: 0 0 40px;
     height: 40px;
     display: flex;
     align-items: center;
-    background-color: #3c3f41;
+    background-color: rgba(0, 0, 0, 0.82);
     border-bottom: 1px solid #1e1f22;
 }
+.just-top-menu-bar .just-title {
+    font-size: 13px;
+    min-width: 0;
+    font-weight: normal;
+    color: #85878b;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 
+}
 .just-top-menu-bar .just-menu-center {
     flex: 1;
 }
