--- a/src/app/components/just-layout/ui/JustLayoutView.css
+++ b/src/app/components/just-layout/ui/JustLayoutView.css
@@ -39,6 +39,10 @@
     height: 100%;
 }
 
+.just-win .just-win-body.fullscreen {
+    background-color: white;
+}
+
 .just-win-title .just-title-list {
     flex: 1;
     overflow-x: overlay;
