--- a/src/app/top-menu/TopMenuBar.css
+++ b/src/app/top-menu/TopMenuBar.css
@@ -1,16 +1,17 @@
 .just-top-menu-bar {
-
-
     flex: 0 0 40px;
     height: 40px;
     display: flex;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.82);
     border-bottom: 1px solid #1e1f22;
+    box-sizing: border-box;
 }
 .just-top-menu-bar .just-title {
+    display: flex;
     -webkit-app-region: drag;
     flex: 1;
+    height: 100%;
     font-size: 13px;
     min-width: 0;
     font-weight: normal;
@@ -18,6 +19,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    justify-content: center;
+    align-items: center;
 
 }
 /*.just-top-menu-bar .just-menu-center {*/
@@ -29,12 +32,16 @@
     display: flex;
     flex: 0 0 120px;
     width: 120px;
+    height: 100%;
 }
 
 .just-top-menu-bar .just-icon-system {
+    display: flex;
     flex: 0 0 40px;
     width: 50px;
     color: white;
+    justify-content: center;
+    align-items: center;
 }
 
 .just-top-menu-bar .just-icon-system svg {
