--- a/src/app/top-menu/TopMenuBar.css
+++ b/src/app/top-menu/TopMenuBar.css
@@ -49,6 +49,7 @@
     height: 16px;
 }
 
+.just-top-menu-bar .just-icon-system:hover { background-color: rgba(255, 255, 255, 0.22);}
 
 .just-app-icon {
     padding: 0 5px 0 5px;
