--- a/src/app/components/just-layout/ui/JustLayoutView.css
+++ b/src/app/components/just-layout/ui/JustLayoutView.css
@@ -1,7 +1,9 @@
 .just-layout {
     width: 100%;
     height: 100%;
-    background-color: #2b2d30;
+    /*background-color: #2b2d30;*/
+    background-color: #272d30;
+    --layout-bg-color: #272d30;
     --title-bg-color: #191a1c;
     --title-font-color: rgb(255, 255, 255, 0.7);
     --splitter-border-color1: #1e1f22;
@@ -24,7 +26,7 @@
     flex: 1;
     width: 100%;
     height: 100%;
-    background-color: white;
+    /*background-color: white;*/
 }
 .just-win .just-win-title {
     flex: 0 0 40px;
@@ -128,18 +130,18 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: var(--splitter-bg-color);
+    /*background-color: var(--splitter-bg-color);*/
 }
 
 .just-row > .just-splitter {
     cursor: ew-resize;
-    border-left: 1px solid var(--splitter-border-color1);
-    border-right: 1px solid var(--splitter-border-color2);
+    /*border-left: 1px solid var(--splitter-border-color1);*/
+    /*border-right: 1px solid var(--splitter-border-color2);*/
 }
 .just-column > .just-splitter {
     cursor: ns-resize;
-    border-top: 1px solid var(--splitter-border-color1);
-    border-bottom: 1px solid var(--splitter-border-color2);
+    /*border-top: 1px solid var(--splitter-border-color1);*/
+    /*border-bottom: 1px solid var(--splitter-border-color2);*/
 }
 
 .dragging {
