--- a/src/app/side-menu/ui/SideMenu.css
+++ b/src/app/side-menu/ui/SideMenu.css
@@ -2,10 +2,14 @@
     display: flex;
     flex-direction: column;
     background-color: #2b2d30;
+    /*background-color: rgba(0, 0, 0, 0.82);*/
     height: 100%;
     color: rgb(255, 255, 255, 0.7);
-    border-left: 1px solid #1e1f22;
-    border-top: 1px solid #1e1f22;
+    /*border-left: 1px solid #1e1f22;*/
+    /*border-top: 1px solid #1e1f22;*/
+    border: 1px solid #1e1f22;
+    border-radius: 15px;
+    box-sizing: border-box;
 }
 
 .side-menu .side-menu-title {
@@ -18,6 +22,10 @@
     min-width: 0;
     padding-left: 10px;
     border-bottom: 1px solid #1e1f22;
+    /*border-radius: 15px;*/
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+
     box-sizing: border-box;
 }
 
