--- a/src/app/top-menu/TopMenuBar.css
+++ b/src/app/top-menu/TopMenuBar.css
@@ -3,8 +3,8 @@
     height: 40px;
     display: flex;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.82);
-    border-bottom: 1px solid #1e1f22;
+    /*background-color: rgba(0, 0, 0, 0.82);*/
+    /*border-bottom: 1px solid #1e1f22;*/
     box-sizing: border-box;
 }
 .just-top-menu-bar .just-title {
