--- a/src/app/components/just-layout/ui/JustLayoutView.css
+++ b/src/app/components/just-layout/ui/JustLayoutView.css
@@ -1,8 +1,8 @@
 .just-layout {
     width: 100%;
     height: 100%;
-    /*background-color: #2b2d30;*/
-    background-color: #272d30;
+    background-color: #2b2d30;
+    /*background-color: #272d30;*/
     --layout-bg-color: #272d30;
     --title-bg-color: #191a1c;
     --title-font-color: rgb(255, 255, 255, 0.7);
@@ -15,6 +15,7 @@
 
 .just-node {
     display: flex;
+    background-color: var(--layout-bg-color);
     flex: 1;
     width: 100%;
     height: 100%;
@@ -149,7 +150,10 @@
     border: 1px dashed gray;
     box-sizing: border-box;
 }
-.just-win-title { display: flex; background-color: var(--title-bg-color);}
+.just-win-title {
+    display: flex;
+    background-color: var(--title-bg-color);
+}
 .just-draggable-title {
     display: flex;
     margin: 0;
@@ -170,7 +174,7 @@
     border-bottom: 1px solid #43454a;
     box-sizing: border-box;
     background-color: #2b2d30;
-    color: white;
+    /*color: white;*/
 }
 .just-draggable-title:hover {
     background-color: #2b2d30;
@@ -184,7 +188,7 @@
 .just-draggable-title .just-icon { display: flex; flex: 0 0 25px; align-items: center; justify-content: center}
 .just-icon svg {
     width: 16px; height: 16px;
-    color: rgb(255, 255, 255, 0.3);
+    /*color: rgb(255, 255, 255, 0.3);*/
 }
 
 .just-close:hover svg {
