--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     padding: 0;
     width: 100%;
     height: 100%;
+    background-color: #272d30;
 }
 *:focus {
     outline: none;
@@ -15,7 +16,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: black;
 }
 
 .just-con {
