--- a/src/app/components/just-layout/ui/JustLayoutView.css
+++ b/src/app/components/just-layout/ui/JustLayoutView.css
@@ -1,8 +1,7 @@
 .just-layout {
     width: 100%;
     height: 100%;
-    background-color: #2b2d30;
-    /*background-color: #272d30;*/
+    background-color: #272d30;
     --layout-bg-color: #272d30;
     --title-bg-color: #191a1c;
     --title-font-color: rgb(255, 255, 255, 0.7);
@@ -15,7 +14,7 @@
 
 .just-node {
     display: flex;
-    background-color: var(--layout-bg-color);
+    /*background-color: var(--layout-bg-color);*/
     flex: 1;
     width: 100%;
     height: 100%;
