--- a/src/app/tool-bar/JustToolBar.css
+++ b/src/app/tool-bar/JustToolBar.css
@@ -3,7 +3,8 @@
 
 .just-tool-bar {
     --icon-font-size: 17px;
-    --icon-color: #ffc233;
+    /*--icon-color: #ffc233;*/
+    --icon-color: #ffffff;
     padding: 5px 0 5px 0;
     display: flex;
     flex-direction: column;
@@ -23,8 +24,8 @@
 
 .just-tool-bar .just-app-icon {
     padding: 3px;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border-radius: 5px;
     box-sizing: border-box;
 }
@@ -32,7 +33,7 @@
     background-color: rgba(255, 255, 255, 0.22);
 }
 
-.just-tool-bar .just-app-icon svg { width: 100%; height: 100%; color: var(--icon-color);}
+.just-tool-bar .just-app-icon svg { color: var(--icon-color);}
 
 .just-tool-bar .just-app-icon:hover { background-color: rgba(255, 255, 255, 0.22);}
 
