--- a/src/app/grid-data/ui/GridDataView.css
+++ b/src/app/grid-data/ui/GridDataView.css
@@ -1,4 +1,4 @@
-.grid-view {
+.grid-data-view {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -12,12 +12,12 @@
     background-color: white;
 }
 
-.grid-view .grid-head {
+.grid-data-view .grid-head {
     flex: 0 0 25px;
     display: flex;
     padding: 3px;
 }
-.grid-view .grid-container {
+.grid-data-view .grid-container {
     display: flex;
     flex: 1;
     min-height: 0;
